// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feed API /api/v1/feeds 1`] = `
Array [
  Object {
    "id": 1,
    "latest_checked": null,
    "latest_updated": null,
    "url": "https://example.com/rss",
  },
]
`;

exports[`feed API /api/v1/feeds/add 1`] = `
Array [
  Object {
    "id": 1,
    "latest_checked": null,
    "latest_updated": null,
    "url": "https://example.com/rss",
  },
]
`;

exports[`feed API /api/v1/feeds/export 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<opml version=\\"1.0\\">
<head><title>feeds</title></head>
<body>
<outline type=\\"rss\\" text=\\"example.com\\" xmlUrl=\\"https://example.com/rss\\"/>
</body>
</opml>"
`;

exports[`feed API /api/v1/feeds/import 1`] = `
Array [
  Object {
    "id": 1,
    "latest_checked": null,
    "latest_updated": null,
    "url": "https://example.com/rss",
  },
  Object {
    "id": 2,
    "latest_checked": null,
    "latest_updated": null,
    "url": "https://example.com/rss2",
  },
  Object {
    "id": 3,
    "latest_checked": null,
    "latest_updated": null,
    "url": "https://example.com/rss3",
  },
]
`;

exports[`feed API /api/v1/feeds/remove 1`] = `
Array [
  Object {
    "id": 2,
    "latest_checked": null,
    "latest_updated": null,
    "url": "https://example.com/rss2",
  },
  Object {
    "id": 3,
    "latest_checked": null,
    "latest_updated": null,
    "url": "https://example.com/rss3",
  },
]
`;

exports[`user API /api/logout 1`] = `
Array [
  "token=; Max-Age=0; Expires=Thu, 01 Jan 1970 00:00:00 GMT; HttpOnly; Path=/api",
]
`;

exports[`user API /api/logout 2`] = `"http://localhost:9000"`;

exports[`user API /api/logout 3`] = `302`;

exports[`user API /api/v1/user 1`] = `
Object {
  "email": "user@example.com",
  "githubId": 1,
  "id": 1,
}
`;
